fixtures/errors/extend_unknown_axis.hu
@extend vals for tagaxis nonexistent_axis {
  foo { display: { en: "Foo" } }
}
